--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+}
+header {
+  padding-top: 10px;
+  padding-right: 15px;
+  padding-bottom: 20px;
+  padding-left: 25px;
+  background-color: #39a6b2;
+}
+
 header h1 {
   font-weight: bold;
   font-size: 36px;
